remove rolebinding meta
